--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="home" class="text-center">
         <div class="container">
             <h1>Sabarish Srinivasan</h1>
-            <p>Aspiring Full Stack Developer</p>
+            <p>Aspiring Cybersecurity Professional</p>
             <a href="#about" class="btn">Read More</a>
         </div>
     </section>
